# donceferino

./: ChangeLog  Makefile.am  Makefile.in  ProjectHome.md  config.h.in  configure.ac
data/ima/: Makefile.am
data/music/: Makefile.am  Makefile.in
data/sounds/: Makefile.am  Makefile.in
po/: ca.po  ceferino.pot  es.po  fr.po
src/: actor.cc  actor.h  audio.cc  audio.h  bloque.cc  comojugar.h  creditos.h  final.cc  final.h  fuente2.cc  fuente2.h  grafico.cc  grafico.h  intro.cc  intro.h  item_menu.h  libgrafico.cc  libgrafico.h  main_ed.cc  main_ed.h  main_op.cc  marcas.h  mundo.cc  mundo.h  nivel.cc  nivel.h  opciones.cc  opciones.h  pelota.cc  procesos.cc  utils.cc
trunk/: ChangeLog  Makefile.am  aclocal.m4  autogen.sh  configure  configure.ac
trunk/data/: Makefile.am  Makefile.in
trunk/data/ima/: Makefile.in
trunk/data/levels/: Makefile.am  Makefile.in
trunk/data/music/: Makefile.in
trunk/m4/: ChangeLog
trunk/po/: ChangeLog  ca.po  ceferino.pot  es.po  fr.po
trunk/src/: Makefile.in  actor.cc  actor.h  audio.cc  audio.h  comojugar.cc  creditos.cc  fuente.cc  fuente.h  fuente2.cc  grafico.cc  grafico.h  item_menu.cc  juego.cc  juego.h  main.cc  main_op.cc  main_op.h  marcas.cc  menu.cc  menu.h  mundo.cc  mundo.h  opciones.cc  procesos.cc  procesos.h  utils.cc
