imadir = $(pkgdatadir)/ima

ima_DATA = barra.png cargando.png editor.png fuente1.png fuente2.png \
fuente.png gaucho.png how_to_play.png icono.png items.png mate.png \
niveles.png op_items.png pelota_1.png pelota_2.png pelota_3.png \
pelota_4.png tiros.png tit_1.png tit_2.png tit_3.png final1.jpg \
final2.jpg final3.jpg final4.jpg final5.jpg final6.jpg \
fondo.jpg fondos.jpg menu.jpg pres_casa.jpg \
pres_lee.jpg pres_losers.jpg pres_rapto.jpg pres_sentado.jpg pres_vs.jpg\
fuente_2.png

EXTRA_DIST = $(ima_DATA) LICENSE-KIND.FILES
